--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,11 @@
   <hr>
 
   <div class="main-container">
-    <app-ng-style></app-ng-style>
+    <!-- <app-ng-style></app-ng-style> -->
+    <app-css></app-css>
+
+    <p>
+      Appcomponent.html
+    </p>
   </div>
 </div>
