feat: Add demos for ngClass

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,7 @@
 
   <div class="main-container">
     <!-- <app-ng-style></app-ng-style> -->
-    <app-css></app-css>
-
-    <p>
-      Appcomponent.html
-    </p>
+    <!-- <app-css></app-css> -->
+    <app-classes></app-classes>
   </div>
 </div>
