feat: Demo custom directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
   <div class="main-container">
     <!-- <app-ng-style></app-ng-style> -->
     <!-- <app-css></app-css> -->
-    <app-classes></app-classes>
+    <!-- <app-classes></app-classes> -->
+    <p [appHighlighted]="'#ffcc00'">
+      Hello world!
+    </p>
   </div>
 </div>
