--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-navbar></app-navbar>
+
 <div class="container">
   <h1>
     Demos <small>Angular</small>
@@ -6,11 +8,6 @@
   <hr>
 
   <div class="main-container">
-    <!-- <app-ng-style></app-ng-style> -->
-    <!-- <app-css></app-css> -->
-    <!-- <app-classes></app-classes> -->
-    <p [appHighlighted]="'#ffcc00'">
-      Hello world!
-    </p>
+    <router-outlet></router-outlet>
   </div>
 </div>
